--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 		<title>Happy Birthday Alexu!</title>	    
         <link type="text/css" rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="jquery.min.js"></script>
-		<script type="text/javascript" src="jscex.min.js"></script>
-		<script type="text/javascript" src="jscex-parser.js"></script>
-		<script type="text/javascript" src="jscex-jit.js"></script>
-		<script type="text/javascript" src="jscex-builderbase.min.js"></script>
-		<script type="text/javascript" src="jscex-async.min.js"></script>
-		<script type="text/javascript" src="jscex-async-powerpack.min.js"></script>
-		<script type="text/javascript" src="xanriefunction.js" charset="utf-8"></script>
-		<script type="text/javascript" src="love.js" charset="utf-8"></script>
+<script type="text/javascript" src="jscex.min.js"></script>
+<script type="text/javascript" src="jscex-parser.js"></script>
+<script type="text/javascript" src="jscex-jit.js"></script>
+<script type="text/javascript" src="jscex-builderbase.min.js"></script>
+<script type="text/javascript" src="jscex-async.min.js"></script>
+<script type="text/javascript" src="jscex-async-powerpack.min.js"></script>
+<script type="text/javascript" src="xanriefunction.js"></script>
+<script type="text/javascript" src="love.js"></script>
         <script>
             function playAudio() {
                 var audio = document.getElementById("myAudio");
