--- a/index.html
+++ b/index.html
@@ -30,23 +30,25 @@
             <div id="wrap">
                 <div id="text">
                     <div id="code">
-                      <span class="say">Happiest birthday, my love! I hope you know how much you</span><br>
-                      <span class="say">mean to me, especially during times like these when we're</span><br>             
-                      <span class="say">both caught up in school and life. Even though I haven't able</span><br>
-                      <span class="say">to be as present because of my phone situation. I miss you</span><br>
-                      <span class="say">more than words can express. Your presence in my life brings</span><br>
-                      <span class="say">me so much comfort and joy, and I cherish every moment we</span><br>
-                      <span class="say">share, even if it’s just through messages. I can't wait for the</span><br>
-                      <span class="say">day when we can just be together without any distractions,</span><br>
-                      <span class="say">just enjoying each other's company. I love you deeply, and</span><br>
-                      <span class="say">I'm sending all my affection to you!!! I miss you so much!</span><br>
+                      <span class="say">Happy Valentine's Day, my baby Nicole! Before anything else,</span><br>
+                      <span class="say">I just want you to know how grateful I am that you’re in my life.</span><br>             
+                      <span class="say">Out of all the people in this world, it’s you. Every day,</span><br>
+                      <span class="say">I still can’t believe I get to call you mine</span><br>
+                      <span class="say">Your presence in my life bringsme so much comfort</span><br>
+                      <span class="say">and joy, and I cherish every moment we share together.</span><br>
+                      <span class="say">I know we’re still young. I know life is still figuring us out.</span><br>
+                      <span class="say">But one thing I’m sure about is how I feel about you.</span><br>
+                      <span class="say">I don’t love you in a temporary way. I love you intentionally.</span><br>
+                      <span class="say">Nicole, I choose you. Not just today. Not just when it’s easy.</span><br>
+					  <span class="say">But even on the days when we’re tired, stressed, or misunderstood.</span><br>
+					  <span class="say">I choose to understand you. I choose to grow with you.</span><br>
+					  <span class="say">I choose to fight for us, not against you. Thank you</span><br>
+					  <span class="say">for loving me. Thank you for being patient with me.</span><br>
+						<span class="say">for loving me. Thank you for being patient with me.</span><br>
+						<span class="say">Thank you for staying. I can't wait for the day when we can just be together. </span><br>
                       <span class="say"><span class="space"></span></span> </font>
                           <br />
-                          <br />  <!--Happiest birthday to my beautiful one! 
-                          Today, I celebrate you and the incredible love you bring into my life. 
-                          You make every moment worthwhile, and I'm endlessly grateful for you. 
-                          I promise to cherish you always and make sure you feel as loved as you make me feel. 
-                          Your presence is my greatest gift, and I can’t imagine life without you. Here’s to celebrating you today and every day! -->
+                          <br />  
                       </p>
                     </div>
                   </div>
