--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
                 <div id="text">
                     <div id="code">
                       <span class="say">Happy Valentine's Day, my baby Nicole! Before anything else,</span><br>
-                      <span class="say">I just want you to know how grateful I am that you’re in my life.</span><br>             
-                      <span class="say">Out of all the people in this world, it’s you. Every day,</span><br>
-                      <span class="say">I still can’t believe I get to call you mine</span><br>
-                      <span class="say">Your presence in my life bringsme so much comfort</span><br>
+                      <span class="say">I just want you to know how grateful I am that you’re in my </span><br>             
+                      <span class="say">life. Out of all the people in this world, it’s you.</span><br>
+                      <span class="say">Every day, I still can’t believe I get to call you mine</span><br>
+                      <span class="say">Your presence in my life brings me so much comfort</span><br>
                       <span class="say">and joy, and I cherish every moment we share together.</span><br>
                       <span class="say">I know we’re still young. I know life is still figuring us out.</span><br>
                       <span class="say">But one thing I’m sure about is how I feel about you.</span><br>
                       <span class="say">I don’t love you in a temporary way. I love you intentionally.</span><br>
                       <span class="say">Nicole, I choose you. Not just today. Not just when it’s easy.</span><br>
-					  <span class="say">But even on the days when we’re tired, stressed, or misunderstood.</span><br>
-					  <span class="say">I choose to understand you. I choose to grow with you.</span><br>
-					  <span class="say">I choose to fight for us, not against you. Thank you</span><br>
+					  <span class="say">But even on the days when we’re tired, stressed, or</span><br>
+					  <span class="say">misunderstood. I choose to understand you. I choose to grow </span><br>
+					  <span class="say">with you. I choose to fight for us, not against you. Thank you</span><br>
 					  <span class="say">for loving me. Thank you for being patient with me.</span><br>
 						<span class="say">for loving me. Thank you for being patient with me.</span><br>
 						<span class="say">Thank you for staying. I can't wait for the day when we can just be together. </span><br>
