--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <body>
         <div id="main">
             <div id="error">，<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>(<a href="http://firefox.com.cn/download/">Firefox</a>)</div>
-            <audio autoplay="autoplay" height="100" width="100" id = "myAudio">
-                    <source src="BrunoMajor-Nothing.mp3" type="audio/mp3" />
-                    <embed height="100" width="100" src="aud.mp3" />
-            </audio>
+            <audio id="myAudio">
+    <source src="BrunoMajor-Nothing.mp3" type="audio/mpeg">
+</audio>
             <div id="wrap">
                 <div id="text">
                     <div id="code">
