--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
                 <div id="text">
                     <div id="code">
                       <span class="say">Happy Valentine's Day, my baby Nicole! Before anything else,</span><br>
-                      <span class="say">I just want you to know how grateful I am that you’re in my </span><br>             
-                      <span class="say">life. Out of all the people in this world, it’s you.</span><br>
+                      <span class="say">ganahan lang jud ko muingon nga super grateful ko nga naa</span><br>             
+                      <span class="say">ka sa akong life. Sa tanang tao sa kalibutan, I found u.</span><br>
                       <span class="say">Every day, I still can’t believe I get to call you mine</span><br>
                       <span class="say">Your presence in my life brings me so much comfort</span><br>
                       <span class="say">and joy, and I cherish every moment we share together.</span><br>
                       <span class="say">I know we’re still young. I know life is still figuring us out.</span><br>
                       <span class="say">But one thing I’m sure about is how I feel about you.</span><br>
-                      <span class="say">I don’t love you in a temporary way. I love you intentionally.</span><br>
-                      <span class="say">Nicole, I choose you. Not just today. Not just when it’s easy.</span><br>
+                      <span class="say">I don’t love you in a temporary way. Intentional ni. Tinud-anay ni</span><br>
+                      <span class="say">Nicole, I choose you. Dili lang karon. Not just when it’s easy.</span><br>
 					  <span class="say">But even on the days when we’re tired, stressed, or</span><br>
 					  <span class="say">misunderstood. I choose to understand you. I choose to grow </span><br>
 					  <span class="say">with you. I choose to fight for us, not against you. Thank you</span><br>
 					  <span class="say">for loving me. Thank you for being patient with me.</span><br>
-						<span class="say">Thank you for staying. I can't wait for the day when we can just be together. </span><br>
+						<span class="say">Thank you for staying. I can't wait for the day when we can</span><br>
+						<span class="say">just be together. I love you so much, pretty baby!</span><br>
                       <span class="say"><span class="space"></span></span> </font>
                           <br />
                           <br />  
