--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <span class="say">and joy, and I cherish every moment we share together.</span><br>
                       <span class="say">I know we’re still young. I know life is still figuring us out.</span><br>
                       <span class="say">But one thing I’m sure about is how I feel about you.</span><br>
-                      <span class="say">I don’t love you in a temporary way. Intentional og real ni</span><br>
+                      <span class="say">I don’t love you in a temporary way. Intentional og real ni.</span><br>
                       <span class="say">Nicole, I choose you. Dili lang karon. Not just when it’s easy.</span><br>
 					  <span class="say">But even on the days when we’re tired, stressed, or</span><br>
 					  <span class="say">misunderstood. I choose to understand you. I choose to grow </span><br>
